--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "weather-cli",
   "version": "1.0.0",
   "description": "CLI for getting weather data",
-  "main": "index.js",
-  "bin": "./index.js",
+  "main": "weather.js",
+  "bin": {
+    "weather": "weather.js"
+  },
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,5 +20,10 @@
   "repository": {
     "type": "git",
     "url": "..."
+  },
+  "dependencies": {
+    "axios": "^1.3.5",
+    "chalk": "^5.2.0",
+    "dedent-js": "^1.0.1"
   }
 }
