--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-cli",
+  "name": "haw-9000",
   "version": "1.0.0",
   "description": "CLI for getting weather data",
   "main": "weather.js",
@@ -19,7 +19,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "..."
+    "url": "https://github.com/svdunaev/weather-cli"
   },
   "dependencies": {
     "axios": "^1.3.5",
