--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "url": "https://github.com/svdunaev/weather-cli"
   },
   "dependencies": {
-    "axios": "^1.3.5",
+    "axios": "^1.4.0",
     "chalk": "^5.2.0",
     "dedent-js": "^1.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.16.3"
   }
 }
