--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "build": "tsc",
+    "start": "node dist/weather.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
